# IS-Pareto

./: README.md  optimizer.py  plot.py  plot_system_1.py  pyproject.toml  reactor_model.py  reactor_model_system_1.py  reactor_model_system_2.py  reactor_model_trial.py  reactor_model_trial_system_1.py  reactor_model_trial_system_2.py  tsemo_results.csv
.github/workflows/: ispareto.yml  quantumpareto.yml
data/: experimental.xlsx  tsemo_results.csv
data/system_1/: gsolv.xlsx  kinetics.xlsx
data/system_2/: experimental.xlsx  gsolv.xlsx  kinetics.xlsx
examples/system_1/: system_1.py
examples/system_1/data/cosmotherm/: ITS1.tab  ITS2.tab  Job_0_Reactant1.tab  Leaving_Group.tab  Nucleophilic.tab  Product1.tab  Product2.tab  Product3.tab  Substrate.tab  TS1.tab  TS2.tab  TS3.tab  TS32.tab  TS4.tab  TS42.tab
examples/system_1/nsga2/: system_1.py
examples/system_1/output/data/: gsolv.csv  insiliciopt.csv  kinetics.csv
examples/system_1/tsemo/: system_1.py
scratches/: optimizer_system_1.py  plot_system_1.py  reactor_model_system_1.py
src/insiliciopt/: __init__.py  kinetics.py  optimizer.py  reactor.py  solvation.py  species.py  utils.py  visualization.py
src/ispareto/: __init__.py  kinetics.py  optimizer.py  reactor.py  solvation.py  utils.py  visualization.py
src/quantumpareto/: kinetics.py  optimizer.py  reactor.py  solvation.py  utils.py
tests/: conftest.py  test_kinetics.py  test_reactor.py  test_solvation.py  test_species.py
tests/test_data/system_1/: Leaving_Group.fchk  Nucleophilic.fchk  Substrate.tab  TS22.tab
tests/test_data/system_1/cosmotherm/: ITS2.tab  Nucleophilic.tab  Product2.tab  TS1.tab  TS2.tab  TS3.tab  TS4.tab
tests/test_data/system_1/gaussian/: Substrate.fchk
tests/test_data/system_1/kinetics/: combined_kinetics.xlsx
(+19 files in other folders)
